fixed tooltips not showing up on edit buttons in Chrome

--- a/src/app/views/events/variants/directives/variantTabs.less
+++ b/src/app/views/events/variants/directives/variantTabs.less
@@ -43,6 +43,10 @@
       padding-top: .5em;
       margin: 0;
     }
+
+    .tooltip-clearfix {
+      display: inline-block;
+    }
   }
   .tabs {
     min-height: 3.5em;
