--- a/src/components/directives/loginToolbar.less
+++ b/src/components/directives/loginToolbar.less
@@ -21,5 +21,8 @@
 
   .dropdown-menu {
     padding: 2px 0;
+    > li > a {
+      padding: 0 5px;
+    }
   }
 }
